<resources>
    <string name="app_name">D1041131036_tugasToastActiv</string>
    <string name="button_main">Lanjut</string>
    <string name="activity2_name">The Activity</string>
    <string name="text_header">Message Received</string>
    <string name="editText_main">Masukkan nama</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
    <string name="text_name">Hallo</string>
    <string name="button_up">CountUp</string>
    <string name="button_down">CountDown</string>
    <string name="count_initial_value">36</string>
</resources>
